# catkin_ill_compilation_case

./: .gitignore  Readme.md
robostack/: pixi.toml
src/mymessages/: CMakeLists.txt  package.xml
src/mymessages/msg/: msg_mymessage.msg
src/mypackage/: CMakeLists.txt  package.xml
src/mypackage/src/: mypackage.cpp
src/mypackage/srv/: srv_myservice.srv
